src/objects/Journal_Voucher__c.object
<CustomObject>
    <description>Used to capture header and footer information for the Journal Voucher .pdf and interface file.</description>
    <fields>
        <fullName>AFRS_Interface_Total_Amount__c</fullName>
        <label>AFRS Interface Total Amount</label>
        <summarizedField>Journal_Voucher_Detail__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Journal_Voucher_Detail__c.Target_Accounting_Systems__c</field>
            <operation>contains</operation>
            <value>AFRS</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Journal_Voucher_Detail__c.Add_to_Interface__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Journal_Voucher_Detail__c.JournalVoucher__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AFRS_PDF_Total_Amount__c</fullName>
        <label>AFRS PDF Total Amount</label>
        <summarizedField>Journal_Voucher_Detail__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Journal_Voucher_Detail__c.Target_Accounting_Systems__c</field>
            <operation>contains</operation>
            <value>AFRS</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Journal_Voucher_Detail__c.Add_to_PDF__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Journal_Voucher_Detail__c.JournalVoucher__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AFRS_Status__c</fullName>
        <defaultValue>&quot;Not Processed&quot;</defaultValue>
        <label>AFRS Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Processed</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agency_Name__c</fullName>
        <defaultValue>&apos;Department of Licensing&apos;</defaultValue>
        <label>Agency Name</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_No__c</fullName>
        <defaultValue>TEXT(2400)</defaultValue>
        <label>Agency No.</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <summarizedField>Journal_Voucher_Detail__c.Amount__c</summarizedField>
        <summaryForeignKey>Journal_Voucher_Detail__c.JournalVoucher__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Approved_By__c</fullName>
        <label>Approved By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mark as approved or not approved to send to AFRS or TMS.</description>
        <inlineHelpText>Mark as approved or not approved to send to AFRS or TMS.</inlineHelpText>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_by_Date__c</fullName>
        <label>Approved by Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Biennium_Year__c</fullName>
        <label>Biennium Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Document_Number__c</fullName>
        <label>Current Document Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Deposit__c</fullName>
        <label>Date of Deposit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Distribution__c</fullName>
        <label>Distribution</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Document Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document_Title__c</fullName>
        <label>Document Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CRJS</fullName>
                </value>
                <value>
                    <fullName>Journal Voucher</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manual JV</fullName>
                </value>
                <value>
                    <fullName>Manual CreditJournal - User Created</fullName>
                </value>
                <value>
                    <fullName>Manual JV -User Created - Correction JV or one system to another JV</fullName>
                </value>
                <value>
                    <fullName>Manual JV -Remittance JV from a validation number</fullName>
                </value>
                <value>
                    <fullName>RemittanceTransfer in POLARIS - User Created</fullName>
                </value>
                <value>
                    <fullName>ManualTransfer - User Created</fullName>
                </value>
                <value>
                    <fullName>ManualTransfer - System Generated to other agencies</fullName>
                </value>
                <value>
                    <fullName>Manual CRJSfor Daily -Lockbox  240Q</fullName>
                </value>
                <value>
                    <fullName>Manual IAP -user created to ensure document # matches OFM/AFRS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Explanation_of_Entry__c</fullName>
        <label>Explanation of Entry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Month__c</fullName>
        <label>Fiscal Month</label>
        <length>2</length>
        
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <length>2</length>
        
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAP_Receipt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IAP Receipt</label>
        <referenceTo>MUSW__Receipt__c</referenceTo>
        <relationshipLabel>Journal Vouchers</relationshipLabel>
        <relationshipName>Journal_Vouchers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Journal_Voucher_Type__c</fullName>
        <label>Journal Voucher Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Counter Funds Received</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                    <default>true</default>
                    <label>Manual</label>
                </value>
                <value>
                    <fullName>Portal Credit Card Pending JV</fullName>
                </value>
                <value>
                    <fullName>Validation Room Funds Suspense JV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prepared_By__c</fullName>
        <label>Prepared By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prepared_by_Date__c</fullName>
        <label>Prepared by Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ref_Document_Number__c</fullName>
        <label>Ref. Document Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refund1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Refund1</label>
        <referenceTo>BGBK__Refund2__c</referenceTo>
        <relationshipLabel>Journal Vouchers</relationshipLabel>
        <relationshipName>Journal_Vouchers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TMS_Interface_Total_Amount__c</fullName>
        <label>TMS Interface Total Amount</label>
        <summarizedField>Journal_Voucher_Detail__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Journal_Voucher_Detail__c.Target_Accounting_Systems__c</field>
            <operation>contains</operation>
            <value>TMS</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Journal_Voucher_Detail__c.Add_to_Interface__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Journal_Voucher_Detail__c.JournalVoucher__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
     <fields>
        <fullName>TMS_PDF_Total_Amount__c</fullName>
        <label>TMS PDF Total Amount</label>
        <summarizedField>Journal_Voucher_Detail__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Journal_Voucher_Detail__c.Target_Accounting_Systems__c</field>
            <operation>contains</operation>
            <value>TMS</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Journal_Voucher_Detail__c.Add_to_PDF__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Journal_Voucher_Detail__c.JournalVoucher__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
    
        <fullName>Refund__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Refund</label>
        <referenceTo>BGBK__Refund__c</referenceTo>
        <relationshipLabel>Journal Vouchers</relationshipLabel>
        <relationshipName>Journal_Vouchers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TMS_Status__c</fullName>
        <defaultValue>&quot;Not Processed&quot;</defaultValue>
        <label>TMS Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Processed</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Telephone_Number__c</fullName>
        <label>Telephone Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <summarizedField>Journal_Voucher_Detail__c.Amount__c</summarizedField>
        <summaryForeignKey>Journal_Voucher_Detail__c.JournalVoucher__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Journal Voucher</label>
    <nameField>
        <displayFormat>JV-{0000}</displayFormat>
        <label>Journal Voucher  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Journal Vouchers</pluralLabel>
    <recordTypes>
        <fullName>Journal_Voucher_Automated</fullName>
        <active>true</active>
        <description>This record type is for batch type of JVs</description>
        <label>Journal Voucher Automated</label>
    </recordTypes>
    <recordTypes>
        <fullName>Journal_Voucher_Manual</fullName>
        <active>true</active>
        <description>This record type is for manual type of JVs</description>
        <label>Journal Voucher Manual</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>